examples/test/testpolicy184.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy184
  namespace: namespace488
spec:
  podSelector:
    matchLabels:
      key12: value44
      key10: value47
      key0: value11
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key21: value38
          key35: value6
      podSelector:
        matchLabels:
          key21: value34
